--- a/Resources/skeleton/crud/views/others/record_actions.html.twig.twig
+++ b/Resources/skeleton/crud/views/others/record_actions.html.twig.twig
@@ -1,31 +1,31 @@
 <div class="form-actions">
-    <a title="{{ "{{ 'Back to the list'|trans({},'rgoubootstrap') }}" }}" class="btn" href="{{ "{{ path('"~ route_name_prefix ~"') }}" }}">
+    <a title="{{ "{{ 'Back to the list'|trans({},'rgoubootstrap') }}" }}" class="btn btn-default" href="{{ "{{ path('"~ route_name_prefix ~"') }}" }}">
        <i class="icon-th-list icon-white"></i> {{ "{{ 'Back to the list'|trans({},'rgoubootstrap') }}" }}
     </a>
 
 {% if ('edit' in actions) and (not hide_save) %}
-    <button class="btn btn-default btn-default btn-primary" type="submit" name="_save">
+    <button class="btn btn-primary" type="submit" name="_save">
         <i class="icon-save"></i>
         {{ "{{ 'Save'|trans({},'rgoubootstrap') }}" }}
     </button>
 {% endif %}
 
 {% if ('edit' in actions) and (not hide_save_add) %}
-    <button class="btn" type="submit" name="_save_and_add">
+    <button class="btn btn-default" type="submit" name="_save_and_add">
         <i class="icon-save"></i> <i class="icon-plus"></i> 
         {{ "{{ 'Save and Add'|trans({},'rgoubootstrap') }}" }}
     </button>
 {% endif %}
 
 {% if ('edit' in actions) and (not hide_edit) %}
-    <a class="btn" href="{{ "{{ path('"~ route_name_prefix ~"_edit', { 'id': record.id }) }}" }}">
+    <a class="btn btn-default" href="{{ "{{ path('"~ route_name_prefix ~"_edit', { 'id': record.id }) }}" }}">
         <i class="icon-pencil"></i>
         {{ "{{ 'Edit'|trans({},'rgoubootstrap') }}" }}
     </a>
 {% endif %}
         
 {% if ('delete' in actions) and (not hide_delete) %}
-    <button id="delete_record" class="btn btn-default btn-default btn-danger" type="button">
+    <button id="delete_record" class="btn btn-danger" type="button">
         <i class="icon-trash"></i>
         {{ "{{ 'Delete'|trans({},'rgoubootstrap') }}" }}
     </button>
