--- a/Resources/views/Menu/knp_menu.html.twig
+++ b/Resources/views/Menu/knp_menu.html.twig
@@ -21,9 +21,9 @@
 
 {# building the class of the item #}
     {%- set classes = item.attribute('class') is not empty ? [item.attribute('class')] : [] %}
-    {%- if matcher.isCurrent(item) %}
+    {%- if item.current %}
         {%- set classes = classes|merge([options.currentClass]) %}
-    {%- elseif matcher.isAncestor(item, options.depth) %}
+    {%- elseif item.currentAncestor %}
         {%- set classes = classes|merge([options.ancestorClass]) %}
     {%- endif %}
     {%- if item.actsLikeFirst %}
@@ -31,6 +31,10 @@
     {%- endif %}
     {%- if item.actsLikeLast %}
         {%- set classes = classes|merge([options.lastClass]) %}
+    {%- endif %}
+    {%- set attributes = item.attributes %}
+    {%- if classes is not empty %}
+        {%- set attributes = attributes|merge({'class': classes|join(' ')}) %}
     {%- endif %}
 
 {# building the class of the children #}
@@ -109,4 +113,4 @@
     </a>
 {% endblock %}
 
-{% block label %}{{ item.label|trans }}{% endblock %}
+{% block label %}{% if options.allow_safe_labels and item.getExtra('safe_label', false) %}{{ item.label|raw }}{% else %}{{ item.label }}{% endif %}{% endblock %}
