--- a/Resources/views/layout_cdn.html.twig
+++ b/Resources/views/layout_cdn.html.twig
@@ -1,46 +1,42 @@
 {% extends 'RgouBootstrapBundle::base.html.twig' %}
 
 {% block head_stylesheets %}
-        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/3.0.0/css/bootstrap-combined.no-icons.min.css" type="text/css" rel="stylesheet" media="screen" />
+        <link href="{% block main_boostrap_css %}//netdna.bootstrapcdn.com/twitter-bootstrap/3.0.0/css/bootstrap-combined.no-icons.min.css{% endblock main_boostrap_css %}" type="text/css" rel="stylesheet" media="screen" />
         <link href="//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" type="text/css" rel="stylesheet" media="screen" />
 {#
         <link href="//fuelcdn.com/fuelux/2.3.1/css/fuelux.css" type="text/css" rel="stylesheet" media="screen" />
         <link href="//fuelcdn.com/fuelux/2.3.1/css/fuelux-responsive.css" type="text/css" rel="stylesheet" media="screen" />
 #}
-        <link href="{{ asset('bundles/rgoubootstrap/css/main.css') }}" type="text/css" rel="stylesheet" media="screen" />
+    {% stylesheets
+    'bundles/rgoubootstrap/chosen/chosen.css'
+    'bundles/rgoubootstrap/css/main.css'
+    output='css/compiled.css'
+    filter='cssrewrite'
+    filter='yui_css'
+    %}
+    <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen" />
+    {% endstylesheets %}
 {% endblock head_stylesheets %}
 
 {% block head_javascripts %}
 {# Additional Javascripts on head #}
 {% endblock head_javascripts %}
 
-{# Top Navigation Bar #}
-{% block navbar_top %}
-    <header class="navbar navbar-default navbar-fixed-top" role="banner">
-        <div class="navbar-header">
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Rgou</a>
-        </div>
-        <nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
-            <!-- Everything you want hidden at 940px or less, place within here -->
-            <div class="nav-collapse collapse">
-                {{ knp_menu_render('samplemain') }}
-                {{ knp_menu_render('sampleuser') }}
-            </div>
-        </nav>
-    </header>
-{% endblock navbar_top %}
+{% block navbar_top_brand %}
+            <a class="brand" href="#">Rgou</a>
+{% endblock navbar_top_brand %}
+
+{% block navbar_top_content %}
+{{ knp_menu_render('samplemain') }}
+{{ knp_menu_render('sampleuser') }}
+{% endblock navbar_top_content %}
 
 {% block footer_javascripts %}
 <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-<script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.1/underscore-min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.9.3/typeahead.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/chosen/1.0/chosen.jquery.min.js"></script>
 {% javascripts
     'bundles/rgoubootstrap/js/jquery.localScroll.js'
     'bundles/rgoubootstrap/js/jquery.scrollTo.js'
@@ -48,6 +44,9 @@
     filter='yui_js' 
     output='js/compiled-cdn.js'
 %}
+        <script type="text/javascript" src="{{ asset_url }}"></script>
+{% endjavascripts %}
 {# <script type="text/javascript" src="//fuelcdn.com/fuelux/2.3.1/loader.min.js"></script> #}
+
 {% endblock footer_javascripts %}     
 
