--- a/Resources/skeleton/crud/views/index.html.twig.twig
+++ b/Resources/skeleton/crud/views/index.html.twig.twig
@@ -1,7 +1,7 @@
 {{ "{% extends '" ~ rgou_bootstrap.template ~ "' %}" }}
 
 {{ "{% block headline %}" }}
-{{ "{{ '" ~ entity ~ "' }} {{ 'list'|trans({},'rgoubootstrap') }}" }}
+{{ entity }} {{ "{{ 'list'|trans({},'rgoubootstrap') }}" }}
     {% if 'new' in actions %}
     <small> 
         {{ "({% transchoice pagination.totalItemCount with {'%count%': pagination.totalItemCount} from 'rgoubootstrap' %}{0}no records|{1}1 record|]1,Inf]%count% records{% endtranschoice %}" }})
