--- a/Resources/skeleton/crud/views/others/delete_form.html.twig.twig
+++ b/Resources/skeleton/crud/views/others/delete_form.html.twig.twig
@@ -1,16 +1,22 @@
-<form id="delete_form" action="{{ "{{ path('"~ route_name_prefix ~"_delete', { 'id': record.id }) }}" }}" method="post">
-{{ '{{ form_widget(delete_form) }}' }}
-<div id="delete_modal" class="modal hide fade">
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3>{{ "{{ 'Delete'|trans({},'rgoubootstrap') }} {{ '" ~ entity ~ "' }}" }}</h3>
-    </div>
-    <div class="modal-body">
-        <p>{{ "{{ 'Are you sure you want delete this record?'|trans({},'rgoubootstrap') }}" }}</p>
-    </div>
-    <div class="modal-footer">
-        <a href="#" class="btn btn-default btn-default btn-primary" type="button" data-dismiss="modal">{{ "{{ 'Cancel'|trans({},'rgoubootstrap') }}" }}</a>
-        <button class="btn btn-default btn-default btn-danger" type="submit">{{ "{{ 'Delete'|trans({},'rgoubootstrap') }}" }}</button>
+{{ "{{ form_start(delete_form, {'action': path('" ~  route_name_prefix ~ "_delete', { 'id': record.id }), 'method': 'POST', 'attr': { 'id': 'delete_form'} }) }}" }}
+{{ "{{ form_widget(delete_form) }}" }}
+{{ "{{ form_end(delete_form) }}" }}
+
+<div class="modal fade" id="delete_modal" tabindex="-1" role="dialog" aria-labelledby="{{ 'Delete'|trans({},'rgoubootstrap') }}" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">{{ "{{ 'Delete'|trans({},'rgoubootstrap') }}" }} {{ entity }}</h4>
+            </div>
+            <div class="modal-body">
+                <p>{{ "{{ 'Are you sure you want delete this record?'|trans({},'rgoubootstrap') }}" }}</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">{{ "{{ 'Cancel'|trans({},'rgoubootstrap') }}" }}</button>
+                <button type="button" class="btn btn-primary" id="delete_button_yes">{{ "{{ 'Delete'|trans({},'rgoubootstrap') }}" }}</button>
+            </div>
+        </div>
     </div>
 </div>
-</form>
+<hr/>
