--- a/Resources/skeleton/crud/views/others/delete_javascript.html.twig.twig
+++ b/Resources/skeleton/crud/views/others/delete_javascript.html.twig.twig
@@ -1,14 +1,9 @@
 {{ "{% block javascripts %}" }}
 <script type="text/javascript">
-/*<![CDATA[*/
 $(function() {
-    $('#delete_record').on('click',function() {
-        $('#delete_modal').modal('show');
-    });
-    $('#delete_record').on('click',function() {
-        $('#delete_modal').modal('show');
+    $('#delete_button_yes').click(function() {
+        $('#delete_form').submit();
     });
  });
-/*]]>*/
 </script>
 {{ "{% endblock javascripts %}" }}
