--- a/Resources/views/Bootswatch/layout_local_slate.html.twig
+++ b/Resources/views/Bootswatch/layout_local_slate.html.twig
@@ -2,11 +2,11 @@
 
 {% block head_stylesheets %}
     {% stylesheets
-    'bundles/rgoubootstrap/bootswatch/amelia/bootstrap.min.css'
+    'bundles/rgoubootstrap/bootswatch/slate/bootstrap.min.css'
     'bundles/rgoubootstrap/font-awesome/css/font-awesome.min.css'
     'bundles/rgoubootstrap/chosen/chosen.css'
     'bundles/rgoubootstrap/css/main.css'
-    output='css/compiled-amelia.css'
+    output='css/compiled-slate.css'
     filter='cssrewrite' 
     filter='yui_css' 
     %}
