--- a/Resources/views/layout_local.html.twig
+++ b/Resources/views/layout_local.html.twig
@@ -12,10 +12,6 @@
     %}
     <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen" />
     {% endstylesheets %}
-{#
-    'bundles/rgoubootstrap/fuelux/css/fuelux.min.css'
-    'bundles/rgoubootstrap/fuelux/css/fuelux-responsive.min.css'
-#}
 {% endblock head_stylesheets %}
 
 {% block head_javascripts %}
@@ -23,7 +19,7 @@
 {% endblock head_javascripts %}
 
 {% block navbar_top_brand %}
-            <a class="brand" href="#">Rgou</a>
+            <a class="navbar-brand" href="#">Rgou</a>
 {% endblock navbar_top_brand %}
 
 {% block navbar_top_content %}
