--- a/Resources/views/Bootswatch/layout_cdn_simplex.html.twig
+++ b/Resources/views/Bootswatch/layout_cdn_simplex.html.twig
@@ -1,6 +1,5 @@
 {% extends 'RgouBootstrapBundle::layout_cdn.html.twig' %}
 
-{% block head_stylesheets %}
-        <link href="http://netdna.bootstrapcdn.com/bootswatch/3.0.0/simplex/bootstrap.min.css" type="text/css" rel="stylesheet" media="screen" />
-        <link href="{{ asset('bundles/rgoubootstrap/css/main.css') }}" type="text/css" rel="stylesheet" media="screen" />
-{% endblock head_stylesheets %}
+{% block main_boostrap_css %}//netdna.bootstrapcdn.com/bootswatch/3.0.0/simplex/bootstrap.min.css{% endblock main_boostrap_css %}
+
+
