--- a/Resources/views/Bootswatch/layout_local_cosmo.html.twig
+++ b/Resources/views/Bootswatch/layout_local_cosmo.html.twig
@@ -4,6 +4,7 @@
     {% stylesheets
     'bundles/rgoubootstrap/bootswatch/cosmo/bootstrap.min.css'
     'bundles/rgoubootstrap/font-awesome/css/font-awesome.min.css'
+    'bundles/rgoubootstrap/chosen/chosen.css'
     'bundles/rgoubootstrap/css/main.css'
     output='css/compiled-cosmo.css'
     filter='cssrewrite' 
