--- a/Resources/skeleton/crud/views/others/delete_form.html.twig.twig
+++ b/Resources/skeleton/crud/views/others/delete_form.html.twig.twig
@@ -2,7 +2,7 @@
 {{ "{{ form_widget(delete_form) }}" }}
 {{ "{{ form_end(delete_form) }}" }}
 
-<div class="modal fade" id="delete_modal" tabindex="-1" role="dialog" aria-labelledby="{{ 'Delete'|trans({},'rgoubootstrap') }}" aria-hidden="true">
+<div class="modal fade" id="delete_modal" tabindex="-1" role="dialog" aria-labelledby="{{ "{{ 'Delete'|trans({},'rgoubootstrap') }}" }}" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
