--- a/Resources/public/css/main.css
+++ b/Resources/public/css/main.css
@@ -16,3 +16,19 @@ body {
   padding: 30px 0;
   margin-top: 70px;
 }
+
+span.twitter-typeahead {
+    width: 100%;
+}
+
+@media print {
+    body {
+        padding-top: 0;
+    }
+    a[href]:after {
+        content: none;
+    }
+    body, html {
+        font-size: 0.8em;
+    }
+}
