--- a/Resources/views/layout_local.html.twig
+++ b/Resources/views/layout_local.html.twig
@@ -11,7 +11,7 @@
     filter='cssrewrite' 
     filter='yui_css' 
     %}
-    <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen" />
+    <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen,print" />
     {% endstylesheets %}
 {% endblock head_stylesheets %}
 
