Update CRUDs and layouts

--- a/Resources/skeleton/crud/views/index.html.twig.twig
+++ b/Resources/skeleton/crud/views/index.html.twig.twig
@@ -87,6 +87,7 @@
 {{ "{% endblock content %}" }}
 
 {{ "{% block javascripts %}" }}
+{{ "{{ parent() }}" }}
 {{ "{% if isSearchActive %}" }}
 <script type="text/javascript">
 $(function(){
