--- a/Resources/skeleton/crud/views/others/delete_javascript.html.twig.twig
+++ b/Resources/skeleton/crud/views/others/delete_javascript.html.twig.twig
@@ -1,4 +1,5 @@
 {{ "{% block javascripts %}" }}
+{{ "{{ parent() }}" }}
 <script type="text/javascript">
 $(function() {
     $('#delete_button_yes').click(function() {
