--- a/Resources/views/layout_local.html.twig
+++ b/Resources/views/layout_local.html.twig
@@ -37,6 +37,7 @@
         'bundles/rgoubootstrap/js/jquery.localScroll.js'
         'bundles/rgoubootstrap/js/jquery.scrollTo.js'
         'bundles/rgoubootstrap/chosen/chosen.jquery.js'
+        'bundles/rgoubootstrap/js/bootbox.js'
         'bundles/rgoubootstrap/js/main.js'
         filter='yui_js' 
         output='js/compiled.js'
