Update typeahead css on bootswatch themes

--- a/Resources/views/Bootswatch/layout_local_simplex.html.twig
+++ b/Resources/views/Bootswatch/layout_local_simplex.html.twig
@@ -5,6 +5,7 @@
     'bundles/rgoubootstrap/bootswatch/simplex/bootstrap.min.css'
     'bundles/rgoubootstrap/font-awesome/css/font-awesome.min.css'
     'bundles/rgoubootstrap/chosen/chosen.css'
+    'bundles/rgoubootstrap/bootstrap-plugins/typeahead/bootstrap.css'
     'bundles/rgoubootstrap/css/main.css'
     output='css/compiled-simplex.css'
     filter='cssrewrite' 
